# litex-acorn-baseboard

./: .gitmodules  pyproject.toml
bringup/acorn_ecp5_link/: litex_acorn_baseboard.py  sqrl_acorn.py
bringup/acorn_i2c_ecp5/: acorn.py
bringup/acorn_i2c_ecp5/firmware/: i2c_spi.c  i2c_spi.h  main.c
bringup/acorn_pcie/: build.sh  sqrl_acorn.py  sqrl_acorn_platform.py
bringup/acorn_sata/: README.md  acorn.py
bringup/acorn_sfp_eth_1gbps/: sqrl_acorn.py
