[tool.poetry]
name = "litex-acorn-baseboard"
version = "0.1.0"
description = ""
authors = ["Ilia Sergachev <ilia.sergachev@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
migen = "*"
litex = {path = "litex", develop=true}
litedram = {path = "litedram", develop=true}
litepcie = {path = "litepcie", develop=true}
liteiclink = {path = "liteiclink", develop=true}
litex-boards = {path = "litex-boards", develop=true}
pythondata-cpu-vexriscv = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
